# VRDAVis

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  package-lock.json  package.json  tsconfig.json
my-app/: package-lock.json  package.json
my-app/protobuf/: CMakeCache.txt  Makefile  build_proto.sh  cmake_install.cmake
my-app/protobuf/shared/: defs.proto
my-app/protobuf/stream/: volume_data.proto
my-app/src/: App.tsx  store.context.ts  styles.scss
my-app/src/components/: ChartPanel.tsx  DataObject.tsx  Portal.tsx  WorldspaceMenu.tsx
my-app/src/components/browser UI/: PairingMenu.tsx
my-app/src/services/: backend.service.ts  cube.service.ts  signalling.service.ts  webRTC.service.ts
my-app/src/stores/: backend.store.ts  cube.store.ts  root.store.ts  signalling.store.ts  webRTC.store.ts
shared/: defs.proto
src/: App.js  App.tsx  AppContext.ts  HttpServer.cpp  HttpServer.h  Main.cpp  Message.h  Session.cpp  Session.h  SessionContext.h  SessionManager.cpp  SessionManager.h  WebSocketServer.cpp  WebSocketServer.h  index.scss  index.tsx
src/components/: Button.js  Button.tsx  Canvas.js  CanvasToTexture.tsx  Chart.js  ChartPanel.tsx  ChartWrapper.tsx  DataObject.tsx  HandMenu.tsx  Panel.js  Panel.tsx  Portal.tsx  Text.tsx  WorldspaceMenu.tsx
src/fonts/: Roboto-Regular-msdf.json
src/services/: BackendService.ts
src/stores/: AppStore.ts
stream/: volume_data.proto
vrdavis-backend/: .gitignore  CMakeLists.txt  README.md  vrdavis-protobuf
vrdavis-backend/src/: Main.cpp  Message.cpp  Message.h  ProgramSettings.cpp  ProgramSettings.h  SessionManager.cpp  SessionManager.h
vrdavis-backend/src/DataStream/: Compression.cpp  Compression.h  Cube.h  Cubelet.h
vrdavis-backend/src/FileData/: FileLoader.cpp  FileLoader.h  Hdf5Loader.cpp  Hdf5Loader.h
vrdavis-backend/src/FileList/: FileInfoLoader.h  FileListHandler.cpp  FileListHandler.h
vrdavis-backend/src/HttpServer/: HttpServer.h  MimeTypes.h
vrdavis-backend/src/Logger/: Logger.cpp  Logger.h
vrdavis-backend/src/Session/: OnMessageTask.cpp  OnMessageTask.h  OnMessageTask.tcc  Session.cpp  Session.h  SessionManager.cpp  SessionManager.h
vrdavis-backend/src/Space/: Space.h
vrdavis-backend/src/ThreadingManager/: ThreadingManager.cpp  ThreadingManager.h
vrdavis-backend/src/Util/: File.cpp  File.h  FileSystem.h  String.cpp  String.h
vrdavis-frontend/: .gitignore  package-lock.json  package.json  tsconfig.json
vrdavis-frontend/protobuf/: README.md  build_proto.sh
vrdavis-frontend/protobuf/control/: close_file.proto  cubes.proto  register_viewer.proto
vrdavis-frontend/protobuf/request/: file_info.proto  file_list.proto
vrdavis-frontend/protobuf/shared/: defs.proto  enums.proto
vrdavis-frontend/protobuf/stream/: cube.proto
vrdavis-frontend/public/: index.html
vrdavis-frontend/public/static/js/: zfp_wrapper.wasm
vrdavis-frontend/public/workers/: OffscreenCanvasWorker.js
vrdavis-frontend/src/: App.tsx  AppContext.ts  index.tsx  store.context.ts
vrdavis-frontend/src/components/: BasicButtonModal.tsx  BasicModal.tsx  BoundsCube.tsx  Button.js  ChartPanel.tsx  CropControls.tsx  CropCube.tsx  CubeControls.tsx  DataCube.tsx  DataObject.tsx  HandMenu.tsx  NormalisedDataCube.tsx  PairingMenu.tsx  PanelText.tsx  Sphere.tsx  TestDataObject.tsx  WorldspaceMenu.tsx
vrdavis-frontend/src/components/browser UI/: BackendMenu.tsx  BasicButtonModal.tsx  BasicModal.tsx  BrowserMenu.tsx  DeviceCredentials.tsx  DropdownSelect.tsx  FileCredentials.tsx  PairingMenu.tsx  WebRTCMenu.tsx
vrdavis-frontend/src/components/vr UI/: AnalyticsPanel.js  AnalyticsPanel.tsx  Button.js  ButtonPanel.tsx  CropPanel.js  ExamplePanel.js  HandMenu.tsx  HandMenuControls.tsx  Panel.js  TextPanel.tsx  WorldspaceMenu.tsx
vrdavis-frontend/src/models/: CompressionQuality.ts  CubeView.ts  Cubelet3DTexture.ts  CubeletCoordinate.ts  Point3D.ts  index.ts
vrdavis-frontend/src/services/: BackendService.ts  CubeService.ts  WebRTCService.ts  backend.service.ts  cube.service.ts  webRTC.service.ts
vrdavis-frontend/src/shaders/: VolumeShader.js
vrdavis-frontend/src/stores/: AppStore.ts  backend.store.ts  cube.store.ts  cubelet.store.ts  file.store.ts  reconstruction.store.ts  root.store.ts  signalling.store.ts  stats.store.ts  webRTC.store.ts
vrdavis-frontend/src/utilities/: index.ts  math3d.ts  reconstructionWorker.js  tiling3d.ts  units.ts
vrdavis-frontend/wasm_libs/: build_libs.sh
vrdavis-frontend/wasm_src/: build_wrappers.sh  build_zfp_wrapper.sh
vrdavis-frontend/wasm_src/zfp_wrapper/: post.ts  zfp_wrapper.c
vrdavis-protobuf/: build_proto.sh  vrdavis-protobuf
vrdavis-protobuf/control/: cubes.proto  open_file.proto  register_viewer.proto  resume_session.proto
vrdavis-protobuf/request/: file_info.proto  file_list.proto
vrdavis-protobuf/shared/: defs.proto  enums.proto
vrdavis-protobuf/stream/: cube.proto  cubelet.proto  error.proto  raster_cube.proto  region_stats.proto  volume.proto  volume_data.proto
vrdavis-signaling-server/: index.html  index.js  indexOLD.js  package-lock.json  package.json
vrdavis-signalling-server/: db.json  index.html  index.js  package-lock.json  package.json
